@@ -43,6 +43,10 @@ init has kicked in.
 Also added unfinished new FXNetworkService class which will be finished later when
 I get the time.
 * [master f1fa43e] Migrated Tn and TnFOX SVN repos over to GIT.
++ [master xxxxxxx] Added memsize() to all memory functions.
+* [master xxxxxxx] Updated SQLite3 to v3.6.23.1 and now have TnFXSQLDB_sqlite3 call
+sqlite3_config in order to replace memory allocator rather than applying patch to
+source.
 
 
 v0.88.1 31st October 2008:
